--- a/src/main/webapp/static/NavBar.css
+++ b/src/main/webapp/static/NavBar.css
@@ -4,15 +4,15 @@
 }
 
 .navbar {
-  background-color: #f2f2f2;
-  position: fixed;
+  background-color: #e5e5e5;
+  position: relative;
   width: 100%;
-  height: 10%;
+  height: 5vw;
 }
 
 .nav-left {
   position:relative;
-  width:45%;
+  width:50%;
   height:100%;
   float:left;
 }
@@ -20,7 +20,7 @@
 .nav-right {
   position:relative;
   height:100%;
-  width:45%;
+  width:30%;
   float:right;
 }
 
@@ -30,17 +30,15 @@
 
 .nav-left input {
   position:relative;
-  margin-top:3%;
-  margin-left: 1%;
+  margin-top:4%;
+  margin-left: 2%;
   padding-left:5px;
   width:45%;
   height: 35%;
 }
 
 .nav-left input[type="submit"] {
-  position:relative;
-  margin-top:4%;
-  margin-left: -5px;
+  margin-left: -0.2%;
   width:15%;
   height: 40%;
   background-color:#808080;
