--- a/src/main/webapp/static/indexStyle.css
+++ b/src/main/webapp/static/indexStyle.css
@@ -56,7 +56,7 @@ nav a {
 
 .header .hotoffers {
   height:99%;
-  width:18%;
+  width:20%;
   margin-top: 2px;
   float:right;
   border-radius: 40px 0px 0px 40px;
@@ -148,7 +148,7 @@ nav a {
 }
 
 .items-container h1 {
-  height: 18%;
+  font-size: 1.5vw;
 }
 .items-container a {
   color:inherit;
