--- a/src/main/webapp/static/signupStyle.css
+++ b/src/main/webapp/static/signupStyle.css
@@ -1,15 +1,128 @@
+
 .modal {
-  background-color: white;
-  border: solid 1px #910f2d;
-  color:black;
+  background-color: rgba(255, 255, 255);
+  border-radius: 50px;
+  box-shadow: 0px 0px 10px 5px #910f2d;
+  color:white;
   position:relative;
-  width:60%;
-  height:80%;
-  left:20%;
+  width:50%;
+  height:70%;
+  left:25%;
   margin: 30px 0;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 2s; /* Firefox < 16 */
+      -ms-animation: fadein 2s; /* Internet Explorer */
+       -o-animation: fadein 2s; /* Opera < 12.1 */
+          animation: fadein 2s;
 }
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 .modal h1 {
   text-align:center;
   font-style: italic;
   font-size: 1.5vw;
+  color:black;
+  padding-top: 20px;
+}
+
+.col1 {
+  width: 45%;
+  position:relative;
+  float:left;
+  margin: 2% 0 0 2.5%;
+}
+.col2 {
+  width: 45%;
+  position: relative;
+  float: right;
+  margin: 2% 2.5% 0 0;
+}
+.inputField {
+  font-size: 1vw;
+  width:100%;
+  padding: 3% 0;
+  margin-bottom: 10%;
+  border-radius: 50px;
+  text-align: center;
+}
+
+.req {
+  border: 1px solid blue;
+}
+
+.inputField:focus {
+  outline: none;
+}
+.inputButton {
+  text-align:center;
+  font-size: 1vw;
+  padding: 1.5% 0;
+  width:50%;
+  margin-top: 2%;
+  border-radius: 50px;
+}
+.inputButton:hover {
+  cursor:pointer;
+  background-color: #edeeef ;
+}
+
+.showPass {
+  position: relative;
+  float:right;
+  width:20%;
+  margin: -19% 2% 0 0;
+  border-radius: 20px;
+  background-color: #910f2d;
+  color: white;
+  font-size: 1vw;
+}
+.showPass:focus {
+  outline:none;
+}
+
+.submitCol {
+  position:relative;
+  width:100%;
+  float:left;
+}
+label {
+  color:black;
+  font-size: 1vw;
+  margin-left:2%;
+}
+
+#horizontalLine {
+  position:relative;
+  height:1px;
+  left:35%;
+  width:30%;
+  background-image:radial-gradient(black,white);
+  margin-top:10px;
 }
