--- a/src/main/webapp/static/ProductView.css
+++ b/src/main/webapp/static/ProductView.css
@@ -5,13 +5,16 @@
 
   td {
       font-family: Georgia, 'Times New Roman', Times, serif;
-      border: 1px solid black;
       border-collapse: collapse;
   }
 
+h3 {
+    text-align: center;
+}
+
 .specs {
     width: 30%;
-    background-color: #e5e5e5;
+    background-color: #9b384f;
     padding: 3%;
     float: left;
 }
@@ -25,7 +28,6 @@
 .product-image {
     width: 50%;
     height: 50%;
-    border: 1px solid black;
     margin-top: 10%;
     margin-bottom: 5%;
 }
@@ -45,4 +47,30 @@
     padding: 5px;
     margin-top: 10px;
     background-color: rgb(113, 153, 153);
+}
+
+.price{
+    padding-left: 10%;
+    border-left: 1px solid tomato;
+    height: 100%;
+    float: right;
+}
+
+.shopname{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 150%;
+}
+
+.address{
+    border-bottom: 1px solid black;
+}
+
+.like-img{
+    width: 2%;
+    height: 20%;
+}
+
+.questionmark-img{
+    width: 2%;
+    height: 20%;
 }
