--- a/src/main/webapp/static/ProductList.css
+++ b/src/main/webapp/static/ProductList.css
@@ -14,6 +14,9 @@ h3 {
 }
 
 .product-entry{
+    position: relative;
+    max-width: 800px;
+    max-height: 100px;
     margin-right: 5%;
     margin-left: 5%;
     margin-top: 3%;
@@ -24,12 +27,13 @@ h3 {
 }
 
 .product-image{
-    width: 10%;
-    height: 10%;
+    width: 100px;
+    height: 100px;
 }
 
 .product-name{
     position: relative;
+    bottom: 70px;
     border: 1px solid black;
     font-size: 150%;
 }
@@ -38,7 +42,8 @@ h3 {
     color: grey;
     font-size: 70%;
     position: relative;
-    left: 10%
+    bottom: 70px;
+    left: 100px;
 }
 
 .product-price{
