--- a/src/main/webapp/static/Footer.css
+++ b/src/main/webapp/static/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  position:relative;
+  position: fixed;
   bottom:0;
   width:100%;
   height:7vw;
@@ -40,5 +40,6 @@
   height:100%;
   float:right;
   text-align: justify;
+  font-size: 90%;
   margin-right: 10px;
 }
