Added a sidebar in productlist, minor fixes

--- a/src/main/webapp/static/ProductView.css
+++ b/src/main/webapp/static/ProductView.css
@@ -8,6 +8,10 @@ td {
     border-collapse: collapse;
 }
 
+td:hover {
+    background-color: grey;
+}
+
 h3 {
     text-align: center;
 }
@@ -75,6 +79,11 @@ h3 {
 .like-img{
     width: 2%;
     height: 20%;
+}
+
+.like-img:hover {
+    cursor:pointer;
+    background-color: grey;
 }
 
 .questionmark-img{
