--- a/src/main/webapp/static/ProductList.css
+++ b/src/main/webapp/static/ProductList.css
@@ -14,10 +14,14 @@ h3 {
     margin-bottom: 7vw;
 }
 
+.list{
+    display: inline-block;
+    width: 60%;
+    min-width: 600px;
+}
+
 .product-entry{
     position: relative;
-    max-width: 800px;
-    max-height: 100px;
     margin-right: 5%;
     margin-left: 5%;
     margin-top: 3%;
@@ -49,4 +53,30 @@ h3 {
 
 .product-price{
     float: right;
+}
+
+at {
+    font-size: 120%;
+}
+
+.filter-name{
+    font-size: 150%;
+}
+
+.filters{
+    padding-left: 3%;
+    width: 20%;
+    min-height: 1000px;
+    margin-bottom: 7vw;
+    background-color: rgb(173, 173, 146);
+    border: 1px solid black;
+    float: left;
+}
+
+.button {
+    margin-top: 1vw;
+    min-width: 20%;
+    max-width:20%;
+    position: relative;
+    left: 40%;
 }
