--- a/src/main/webapp/static/Footer.css
+++ b/src/main/webapp/static/Footer.css
@@ -1,11 +1,16 @@
 .footer {
-  position: fixed;
+  position: relative;
   bottom:0;
+  right:0;
+  left:0;
+
   width:100%;
-  height:7vw;
+  height:120px;
   background-color: #e5e5e5;
   text-align: center;
   font-size: 1vw;
+  display:block;
+  overflow:hidden;
 }
 
 .categories-box {
