--- a/src/main/webapp/static/shopsStyle.css
+++ b/src/main/webapp/static/shopsStyle.css
@@ -10,10 +10,17 @@
   position:relative;
   float:left;
   width:23%;
-  height:350px;
+  height:300px;
   margin: 2% 1%;
   background-color:white;
   text-align:center;
+  box-shadow: -1px 0 1px 2px black;
+}
+
+.product-image {
+  width:90%;
+  height:50%;
+  margin:5% 0;
 }
 
 .filter {
