--- a/src/main/webapp/static/ProductView.css
+++ b/src/main/webapp/static/ProductView.css
@@ -77,8 +77,8 @@ h3 {
 }
 
 .like-img{
-    width: 2%;
-    height: 20%;
+    width: 15px;
+    height: 15px;
 }
 
 .like-img:hover {
@@ -87,6 +87,6 @@ h3 {
 }
 
 .questionmark-img{
-    width: 2%;
-    height: 20%;
+    width: 15px;
+    height: 15px;
 }
