--- a/src/main/webapp/static/ProductList.css
+++ b/src/main/webapp/static/ProductList.css
@@ -4,84 +4,121 @@
 
 }
 
-h3 {
-    margin-left:5%;
-    margin-top: 3%;
-    text-align: left;
-}
+
 
 .background{
     background-color: #f1f1f1;
-    margin-bottom: 7vw;
+}
+
+.container {
+  width:100%;
 }
 
 .list{
-    display: inline-block;
-    width: 60%;
-    min-width: 600px;
+    position:relative;
+    float:right;
+    width: 78%;
+    display:inline-block;
+
 }
 
 .product-entry{
     position: relative;
-    margin-right: 5%;
-    margin-left: 5%;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    padding: 3%;
+    width:80%;
+    height:250px;
+    margin: 3% 10%;
     border: 1px solid black;
     background-color: rgb(255, 255, 255);
 }
 
 .product-image{
-    width: 100px;
-    height: 100px;
+    position:relative;
+    width: 30%;
+    height:170px;
+    margin-top:40px;
+    margin-left: 10px;
+    float:left;
+}
+
+.product-details {
+  position:relative;
+  float:right;
+  height:100%;
+  width:65%;
 }
 
 .product-name{
-    position: relative;
-    bottom: 70px;
-    border: 1px solid black;
+    float:left;
     font-size: 150%;
+    display:inline-block;
+}
+
+.product-description {
+  float:left;
+  width:100%;
 }
 
 .product-specs{
+    float:left;
     color: grey;
-    font-size: 70%;
+    font-size: 100%;
     position: relative;
-    bottom: 70px;
-    left: 100px;
 }
 
 .product-price{
-    float: right;
+  float:right;
+  margin-top:20px;
 }
 
-at {
-    font-size: 1vw;
-    margin-bottom: 50px;
-}
 
-.filter-name{
-    font-size: 1.5vw;
-    margin-bottom: 5%;
-}
 
 .filters{
-    margin-left: 10%;
-    margin-top: 3%;
-    width: 20%;
-    min-height: 1000px;
-
-    float: left;
+  position:relative;
+  width:20%;
+  height:100%;
+  float:left;
+  overflow: auto;
 }
 
-.button {
-    margin-top: 1vw;
-    min-width: 20%;
-    max-width:20%;
-    position: relative;
-    left: 40%;
+
+.filterGroups h3 {
+  margin-top: 5%;
+  margin-left: 50%;
 }
-.filterGroups {
-  margin-top:3%;
+
+.filterGroups input {
+  margin-left:50%;
+}
+
+label {
+  font-size:1.5vw;
+  margin-right:10px;
+}
+
+.pages {
+  width:3%;
+  padding: 0.6% 0%;
+  margin: 2% 0 2% 0;
+  background-color:Floralwhite;
+  border: 1px solid Dodgerblue;
+  outline:none;
+  color: Dodgerblue;
+  font-size: 1vw;
+  text-decoration: underline;
+  display:inline-block;
+
+}
+
+.pages:hover {
+  cursor:pointer;
+  background-color: Beige;
+}
+
+.active {
+  background-color: Dodgerblue;
+  color: White;
+}
+.active:hover {
+  cursor:pointer;
+  background-color: Dodgerblue;
 }
