--- a/src/main/webapp/static/Map.css
+++ b/src/main/webapp/static/Map.css
@@ -1,6 +1,9 @@
 
 #map {
-  width: 400px;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  margin-left: 3%;
+  width: 80%;
   height: 500px;
   z-index: 1;
 }
