--- a/src/main/webapp/static/Map.css
+++ b/src/main/webapp/static/Map.css
@@ -2,8 +2,7 @@
 #map {
   margin-top: 3%;
   margin-bottom: 3%;
-  margin-left: 2%;
-  width: 70%;
-  height: 500px;
+  width: 45vw;
+  height: 45vh;
   z-index: 1;
 }
