--- a/src/main/webapp/static/addproduct.css
+++ b/src/main/webapp/static/addproduct.css
@@ -51,11 +51,25 @@
     margin-left: 70%;
     margin-bottom: 1%;
  }
+ .button1:hover {
+   cursor:pointer;
+ }
+
+ .tags {
+    background-color:red;
+    color:white;
+ }
 
 .footerdiv {
     position: relative;
     margin-bottom: 0%;
     margin-top: 12%;
+}
+.tablecontent {
+  width:80%;
+}
+.category {
+  padding:10px 0;
 }
 
 .tablecontent tr {
