--- a/src/main/webapp/static/addrecord.css
+++ b/src/main/webapp/static/addrecord.css
@@ -65,11 +65,13 @@
 
 .tablecontent td {
     width: 50%;
+    padding:5% 0;
     margin-top:10%;
 }
 
 .tablecontent label{
     font-size: 15px;
+    font-weight: bold;
     float: right;
 }
 
